Added CSRF-token checks to forms

--- a/templates/edit_spot.html
+++ b/templates/edit_spot.html
@@ -47,6 +47,7 @@
             <textarea name="notes" rows="10" cols="100" maxlength="5000">{{ spot.notes }}</textarea>
             </p>
             <p>
+            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
             <input type="submit" name="update" value="Update" />
             <input type="submit" name="cancel" value="Cancel" />
             </p>
