--- a/templates/spot.html
+++ b/templates/spot.html
@@ -54,6 +54,7 @@
 
         <form action="/spot/{{ spot.id }}" method="post">
             <textarea name="content" rows="4" cols="50" maxlength="1000" required></textarea>
+            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
             <input type="submit" name="submit" />
         </form>
         </body>
