Added CSRF checks

--- a/templates/edit_spot.html
+++ b/templates/edit_spot.html
@@ -18,6 +18,7 @@
     <form action="/add_image" method="post" enctype="multipart/form-data">
         <input type="hidden" name="spot_id" value="{{ spot.id }}" />
         <input type="file" name="image" accept=".jpg" />
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
         <input type="submit" name="upload" value="Submit" />
     </form>
     </p>
